scripts/nullness/original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8.txt
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:44: error: [assignment] incompatible types in assignment.
		op1 = null;
		      ^
  found   : null (NullType)
  required: @Initialized @NonNull DisassembledOperand
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:45: error: [assignment] incompatible types in assignment.
		op2 = null;
		      ^
  found   : null (NullType)
  required: @Initialized @NonNull DisassembledOperand
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/DisassembledInstruction.java:56: error: [assignment] incompatible types in assignment.
		op2 = null;
		      ^
  found   : null (NullType)
  required: @Initialized @NonNull DisassembledOperand
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/instructions/ADDTest.java:35: error: [initialization.field.uninitialized] the default constructor does not initialize field bus
	AddressSpace bus;
	             ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/instructions/ADDTest.java:36: error: [initialization.field.uninitialized] the default constructor does not initialize field cpu
	Cpu cpu;
	    ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000.java:38: error: [assignment] incompatible types in assignment.
			i_table[i] = null;
			             ^
  found   : null (NullType)
  required: @Initialized @NonNull Instruction
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000.java:40: error: [assignment] incompatible types in assignment.
		unknown = new UNKNOWN(this);
		          ^
  found   : @UnderInitialization(m68k.cpu.instructions.UNKNOWN.class) @NonNull UNKNOWN
  required: @Initialized @NonNull Instruction
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000.java:40: error: [argument] incompatible argument for parameter cpu of UNKNOWN constructor.
		unknown = new UNKNOWN(this);
		                      ^
  found   : @UnderInitialization(m68k.cpu.CpuCore.class) @NonNull MC68000
  required: @Initialized @NonNull Cpu
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000.java:42: error: [method.invocation] call to loadInstructionSet() not allowed on the given receiver.
		loadInstructionSet();
		                  ^
  found   : @UnderInitialization(m68k.cpu.MC68000.class) @NonNull MC68000
  required: @Initialized @NonNull MC68000
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:45: error: [initialization.fields.uninitialized] the constructor does not initialize fields: srcHandlers, dstHandlers
	public CpuCore()
	       ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:50: error: [assignment] incompatible types in assignment.
		srcEAHandler = null;
		               ^
  found   : null (NullType)
  required: @Initialized @NonNull Operand
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:51: error: [assignment] incompatible types in assignment.
		dstEAHandler = null;
		               ^
  found   : null (NullType)
  required: @Initialized @NonNull Operand
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:53: error: [assignment] incompatible types in assignment.
		memory = null;
		         ^
  found   : null (NullType)
  required: @Initialized @NonNull AddressSpace
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:56: error: [method.invocation] call to initEAHandlers() not allowed on the given receiver.
		initEAHandlers();
		              ^
  found   : @UnderInitialization @NonNull CpuCore
  required: @Initialized @NonNull CpuCore
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1321: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1406: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1492: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1578: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1670: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1763: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1851: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1855: error: [initialization.field.uninitialized] the default constructor does not initialize field idxSize
		protected Size idxSize;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:1979: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2065: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2150: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2239: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2243: error: [initialization.field.uninitialized] the default constructor does not initialize field idxSize
		protected Size idxSize;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2369: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2467: error: [initialization.field.uninitialized] the default constructor does not initialize field size
		protected Size size;
		               ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/CpuCore.java:2469: error: [initialization.field.uninitialized] the default constructor does not initialize field name
		protected String name;
		                 ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000Test.java:33: error: [initialization.field.uninitialized] the default constructor does not initialize field bus
	AddressSpace bus;
	             ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/cpu/MC68000Test.java:34: error: [initialization.field.uninitialized] the default constructor does not initialize field cpu
	Cpu cpu;
	    ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java:49: error: [initialization.fields.uninitialized] the constructor does not initialize fields: reader, writer
	public Monitor(Cpu cpu, AddressSpace memory)
	       ^
../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java:112: error: [argument] incompatible argument for parameter line of Monitor.handleCommand.
				handleCommand(reader.readLine());
				                             ^
  found   : @Initialized @Nullable String
  required: @Initialized @NonNull String
Note: ../original/url542ae48576_tonyheadford_m68k_tgz-pJ8-m68k_MonitorJ8/src/m68k/Monitor.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
34 errors
